feat: update app title to 'Governance Power Through Token Locking'

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "WXM Lock",
+  "name": "🌐 Governance Power Through Token Locking",
   "icons": [
     {
       "src": "favicon.ico",
